--- a/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout/login.phtml
+++ b/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout/login.phtml
@@ -3,8 +3,8 @@
     <h1><?php echo $this->__('LOGIN'); ?></h1>
 	</div>	
 	<div style="float:left;width:100%;">
-		<div class="step-subtitle left"><?php echo $this->__('Please login with your email address and password.');?></div>	
-		<div class="close-box right">
+		<div class="step-subtitle fleft left"><?php echo $this->__('Please login with your email address and password.');?></div>
+		<div class="close-box f-right right">
 			<p class="right"><a href="" onclick="javascript:TINY.box.hide();return false">Close</a></p>
 		</div>
 	</div>	
