--- a/skin/frontend/gs-default/default/css/styles.css
+++ b/skin/frontend/gs-default/default/css/styles.css
@@ -814,8 +814,6 @@ ol#cart-item-list .item-options dd {
 	background:#14142a;
 	border:1px solid #ccc;
 	margin:0px 0px 15px 0px;
-	min-height:184px;
-	height:auto !important;
 	height:184px;
 }
 .product_list_right .img_featured{
@@ -1666,6 +1664,25 @@ ul.dbrands li .desc_bname a:hover {
     display:none;
 }
 */
+.checkout_success p {
+    padding:5px;
+}
+
+.checkout_success_button_container {
+    float:left;
+}
+
+.checkout_success_button_container button {
+    background: url("../images/btn_bg2.jpg") repeat-x scroll 0 0 transparent;
+    border: 1px solid #CCCCCC;
+    color: #606163;
+    font-size: 11px;
+    font-weight: 700;
+    margin: 0 0 20px;
+    overflow: hidden;
+    padding: 3px;
+}
+
 
 .checkout_block label{
 	display:block;
