--- a/app/design/frontend/gs-default/default/template/catalog/product/view/media.phtml
+++ b/app/design/frontend/gs-default/default/template/catalog/product/view/media.phtml
@@ -22,6 +22,7 @@
     <div class="btn-next">
         <a href="javascript:void(0);" class="next<?php if($galleryItemCount<=3):?> disabled<?php endif; ?>"></a>
     </div>
+	<div style="display:none;position:absolute;top:0;left:0;width:inherit;height:inherit;background:#ffffff;opacity:0.6;border-radius:5px;z-index:999;" class="scp-please-wait"></div>
 <?php else: ?>
 	&nbsp;
 <?php endif; ?>
