--- a/app/design/frontend/gs-default/default/template/craftyclicks/common_config.phtml
+++ b/app/design/frontend/gs-default/default/template/craftyclicks/common_config.phtml
@@ -1,6 +1,6 @@
 <?php
 
-$conf = Mage::getStoreConfig('general');		
+$conf = Mage::getStoreConfig('general');
 $js_config = "";
 
 if (1 == $conf['craftyclicks']['active']) {
@@ -15,7 +15,7 @@ if (1 == $conf['craftyclicks']['active']) {
 	$js_config.= " var _cp_button_class = '".$conf['craftyclicks']['button_class']."';";
 	$js_config.= " var _cp_result_box_height = '".$conf['craftyclicks']['max_res_lines']."';"; // number of lines to show in result box, must be 1 or more
 	$js_config.= " var _cp_result_box_width	= '';"; // width of the result box
-	$js_config.= " var _cp_busy_img_url	= '';";		// the url of the image to show while waiting for lookup results, e.g. a spinning wheel etc.
+	$js_config.= " var _cp_busy_img_url	= '".$this->getSkinUrl('images/craftyclicks/crafty_postcode_busy.gif')."';";		// the url of the image to show while waiting for lookup results, e.g. a spinning wheel etc.
 
 	if (array_key_exists('clear_result',$conf['craftyclicks']) && $conf['craftyclicks']['clear_result']) {
 		$js_config.= " var _cp_clear_result = true;";
