--- a/skin/frontend/gs-default/default/css/styles.css
+++ b/skin/frontend/gs-default/default/css/styles.css
@@ -1640,6 +1640,8 @@ ul.dbrands li .desc_bname a:hover {
 
 #crafty_postcode_lookup_result_option1{
     width:276px;
+    color:#606163;
+    font-size: 10px;
 }
 
 #crafty_postcode_lookup_result_option2{
