- removed scp js customization

--- a/app/design/frontend/gs-default/default/layout/local.xml
+++ b/app/design/frontend/gs-default/default/layout/local.xml
@@ -105,7 +105,10 @@
 			<action method="addJs"><script>jquery/jquery.jqzoom-core-pack.js</script></action>
             <action method="addJs"><script>jquery/jcarousellite_1.0.1.js</script></action>
             // add our extended product.js
+            <!--
             <action method="addItem"><type>skin_js</type><name>js/productExt.js</name></action>
+            -->
+            <action method="addItem"><type>skin_js</type><name>js/scp_product_extensionExt.js</name></action>
             <block type="catalog/product_view" name="facebook_meta" before="-" template="catalog/product/view/fb_og_meta.phtml"/>
 		</reference>
         
