--- a/app/design/frontend/gs-default/default/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/gs-default/default/template/checkout/cart/sidebar.phtml
@@ -28,7 +28,7 @@
 			<?php endforeach; ?>
 			<div class="prod_brand">
 				<div class="total_prod">
-					<?php echo $this->__('Total') ?> </span><span class="price"><?php echo Mage::helper('checkout')->formatPrice($this->getSubtotal()) ?>
+					<?php echo $this->__('Total') ?> <span class="price"><?php echo Mage::helper('checkout')->formatPrice($this->getSubtotal()) ?></span>
 				</div>
 			</div>
 			<div class="rad_8 btn_block">
