--- a/app/design/frontend/gs-default/default/template/checkout/success.phtml
+++ b/app/design/frontend/gs-default/default/template/checkout/success.phtml
@@ -65,7 +65,7 @@
 		</ul>
 		<?php endif;?>
         <br/>
-		<div class="checkout_success_button_container">
+		<div class="rad_8 checkout_success_button_container">
 			<button type="button" title="<?php echo $this->__('Continue Shopping') ?>" onclick="window.location='<?php echo $this->getUrl() ?>'"><span><span><?php echo $this->__('Continue Shopping') ?></span></span></button>
 		</div>
 		
