--- a/app/design/frontend/gs-default/default/template/page/gs-2columns-right.phtml
+++ b/app/design/frontend/gs-default/default/template/page/gs-2columns-right.phtml
@@ -10,6 +10,7 @@
 </head>
 <body<?php echo $this->getBodyClass()?' class="'.$this->getBodyClass().'"':'' ?>>
 <?php echo $this->getChildHtml('after_body_start') ?>
+    <?php echo $this->getChildHtml('global_notices') ?>
 <div id="graydirt-container">
 	<div id="w960">
 		<div id="header_wrapper">
