--- a/skin/frontend/gs-default/default/css/styles.css
+++ b/skin/frontend/gs-default/default/css/styles.css
@@ -1642,6 +1642,7 @@ ul.dbrands li .desc_bname a:hover {
     width:276px;
     color:#606163;
     font-size: 10px;
+    font-weight: normal;
 }
 
 #crafty_postcode_lookup_result_option2{
@@ -1863,6 +1864,10 @@ select.error_field{
 }
 ul.messages{
 	color:#77A33F;
+}
+
+a.show-login:hover,a.show-login:active {
+    color:red;
 }
 
 /*------------------------body begin------------------------*/
