--- a/app/design/frontend/gs-default/default/template/sendfriend/send.phtml
+++ b/app/design/frontend/gs-default/default/template/sendfriend/send.phtml
@@ -26,9 +26,10 @@
         if(recipCount>=maxRecip && maxRecip != 0) {
             $('add_recipient_button').hide();
             $('max_recipient_message').show();
+            return false;
+        } else {
+            ul.appendChild(li_mail);
         }
-
-        ul.appendChild(li_mail);
     }
 //]]>
 </script>
@@ -227,16 +228,16 @@ textarea{
                 </li>
             </ul>
         </div>
+        <div id="max_recipient_message" style="display:none;margin-bottom:10px;color:#FF0000;">
+            <?php if ($this->getMaxRecipients()): ?>
+              <p class="limit"><?php echo $this->__('Maximum %d email addresses allowed.', $this->getMaxRecipients()) ?></p>
+            <?php endif; ?>
+        </div>
         <div class="buttons-set">
             <p class="back-link"><a href="#" onclick="history.back(); return false;"><small>&laquo; </small><?php echo $this->__('Back') ?></a></p>
                <div class="rad_8 btn_block">
                      <button type="submit" class="button<?php if (!$this->canSend()):?> disabled<?php endif ?>"<?php if (!$this->canSend()):?> disabled="disabled"<?php endif ?>><span><?php echo $this->__('Send Email') ?></span></button>
                </div>
-			<div id="max_recipient_message" style="display:none;">
-                <?php if ($this->getMaxRecipients()): ?>
-                  <p class="limit"><?php echo $this->__('Maximum %d email addresses allowed.', $this->getMaxRecipients()) ?></p>
-                <?php endif; ?>
-            </div>
             <?php if (1 < $this->getMaxRecipients()): ?>
                 <p id="add_recipient_button">
                     <div class="rad_8 btn_block">
