--- a/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout/billing.phtml
+++ b/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout/billing.phtml
@@ -205,9 +205,8 @@
 		<li class="input-box">
 			<?php if(!$this->isCustomerLoggedIn()): ?>
 			<div class="input-box">
-				<label for="billing:email"><?php echo $this->__('Email Address') ?> <span class="required">*</span></label>
+				<label for="billing:email"><?php echo $this->__('Email Address') ?> <span class="required">*</span><span id="valid_email_address_image" style="padding-left:5px;display:none;"><img src="<?php echo $this->getSkinUrl('images/onestepcheckout/valid.gif')?>" title="<?php echo $this->__('Valid Email Address');?>" alt="<?php echo $this->__('Valid Email Address');?>" width="12" height="12"/></span></label>
 				<input type="text" name="billing[email]" id="billing:email" value="<?php echo $this->htmlEscape($this->getBillingAddress()->getEmail()) ?>" title="<?php echo $this->__('Email Address') ?>" class="validate-email required-entry input-text"  />
-				<span id="valid_email_address_image" style="display:none;"><img src="<?php echo $this->getSkinUrl('images/onestepcheckout/valid.gif')?>" title="<?php echo $this->__('Valid Email Address');?>" alt="<?php echo $this->__('Valid Email Address');?>" width="18"/></span>				
 				<div id="email-error-message" class="error-message">										
 				</div>
 			</div>
@@ -294,11 +293,11 @@
 		<?php endif;?>
 		<?php if (!$this->isCustomerLoggedIn() && (Mage::helper('onestepcheckout')->enableRegistration() || !Mage::helper('onestepcheckout')->allowGuestCheckout())):?>
 		<li id="password_section_id" <?php if (!Mage::helper('onestepcheckout')->allowGuestCheckout()):?>style="display:block"<?php else:?>style="display:none"<?php endif?>>
-			<div class="input-box">
+			<div class="input-box fleft">
 				<label for="billing:customer_password"><?php echo $this->__('Password') ?> <span class="required">*</span></label>
 				<input type="password" name="billing[customer_password]" id="billing:customer_password" title="<?php echo $this->__('Password') ?>" class="input-text required-entry validate-password" />
 			</div>
-			<div class="input-box">
+			<div class="input-box fright">
 				<label for="billing:confirm_password"><?php echo $this->__('Confirm Password') ?> <span class="required">*</span></label>
 				<input type="password" name="billing[confirm_password]" title="<?php echo $this->__('Confirm Password') ?>" id="billing:confirm_password" class="input-text required-entry validate-cpassword" />
 			</div>
