--- a/skin/frontend/gs-default/default/css/styles.css
+++ b/skin/frontend/gs-default/default/css/styles.css
@@ -155,6 +155,10 @@ input[type="button"] {
 	float:left;
 	margin:0px 7px 0px 0px;
 }
+.added_tobag .prod_brand .brand_details{
+	float:left;
+	width:155px;
+}
 .added_tobag .prod_brand a, .added_tobag .prod_brand a:hover{
 	color:#77a33f;
 	text-decoration:underline;
@@ -846,6 +850,10 @@ ol#cart-item-list .item-options dd {
 	display:block;
 	padding:0px 25px 15px 25px;
 }
+.product-view .detail_block {
+	padding:0px 0px 15px 0px;
+	position:relative;
+}
 .productdetail_wrapper {
 	width:960px;
 }
@@ -963,9 +971,11 @@ ol#cart-item-list .item-options dd {
 	font-size:11px;
 	margin:5px 0px;
 	line-height:1.4em;
-	min-height:120px;
+	/*min-height:120px;*/
+    min-height:30px;
 	height:auto !important;
-	height:120px;
+	/*height:120px;*/
+    height:30px;
 }
 .detail_description .pdescription p {
 	padding-bottom:8px;
