--- a/app/design/frontend/gs-default/default/layout/local.xml
+++ b/app/design/frontend/gs-default/default/layout/local.xml
@@ -67,7 +67,11 @@
         </reference>
 
 	</default>
-
+    <cms_page>
+        <reference name="head">
+            <action method="addJs"><script>jquery/jquery-1.7.1.min.js</script></action>
+        </reference>
+    </cms_page>
 	<customer_logged_out>
 		<!-- Removes 'Log In' link - Default position: 60 -->
 		<reference name="top.links">
@@ -101,7 +105,7 @@
 		<reference name="head">
 			<action method="addItem"><type>skin_css</type><name>css/jquery/jquery-ui-1.8.21.custom.css</name></action>
 			<action method="addItem"><type>skin_css</type><name>css/jquery/jquery.jqzoom.css</name></action>
-			<action method="addJs"><script>jquery/jquery-1.7.1.min.js</script></action>
+            <action method="addJs"><script>jquery/jquery-1.7.1.min.js</script></action>
 			<action method="addJs"><script>jquery/jquery-ui-1.8.21.custom.min.js</script></action>
 			<action method="addJs"><script>jquery/jquery.jqzoom-core-pack.js</script></action>
             <action method="addJs"><script>jquery/jcarousellite_1.0.1.js</script></action>
