- added jquery on checkout/cart - change call of terms and condition

--- a/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout/review.phtml
+++ b/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout/review.phtml
@@ -89,7 +89,7 @@
 		<tr valign="top">
 			<td>
 				<input type="checkbox" name="terms_conditions_checkbox" id="terms_conditions_checkbox_id" value="1" class="required-entry"/>
-				<span class="cbox_text"><?php echo $this->__('I accept the ');?> <a href="#" onclick="showTermsAndCondition(); return false;"><?php echo $this->__('Terms and Conditions');?></a></span>
+				<span class="cbox_text"><?php echo $this->__('I accept the ');?> <a href="/terms-and-conditions" target="_blank"><?php echo $this->__('Terms and Conditions');?></a></span>
 			</td>
 		</tr>
 		<?php endif;?>
