--- a/app/design/frontend/gs-default/default/layout/checkout.xml
+++ b/app/design/frontend/gs-default/default/layout/checkout.xml
@@ -57,6 +57,9 @@ Default layout, loads most of the pages
         <label>Shopping Cart</label>
         <remove name="right"/>
         <remove name="left"/>
+        <reference name="head">
+            <action method="addJs"><script>jquery/jquery-1.7.1.min.js</script></action>
+        </reference>
         <!-- Mage_Checkout -->
         <reference name="root">
             <action method="setTemplate"><template>page/gs-1column.phtml</template></action>
